<resources>
    <string name="app_name">EveManager</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="signup_action">Register</string>
    <string name="title_activity_registeration">Register</string>
    <string name="prompt_name">Full Name</string>
    <string name="prompt_address">Address</string>
    <string name="invalid_name">Name should have atleast 2 characters</string>
    <string name="prompt_event_name">Title</string>
    <string name="prompt_event_date">Date</string>
    <string name="prompt_event_location">Location</string>
    <string name="prompt_event_description">Description</string>
    <string name="title_add_event_activity">Add Event</string>
    <string name="action_logout">Logout</string>
    <string name="title_a_event_details">Event Details</string>
    <string name="event_name">Event Name:</string>
    <string name="event_location">Location</string>
    <string name="event_description">Description</string>
    <string name="invalid_address">Address cannot be more than 100 characters</string>
</resources>
